deploy/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: talk-with-neighbors
  labels:
    app.kubernetes.io/part-of: talk-with-neighbors
